# unforgettable7_game

./: .gitignore  CHANGELOG.md  Cargo.toml  CodeFlow.md  LICENSE  Makefile.toml  README.md  TODO.md  cache69.txt  codetour_start_route_template_render.md
tmp/: temp68.txt  temp69.txt
unforgettable7/: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
unforgettable7/src/: ack_msg_mod.rs  call_on_next_tick_mod.rs  div_grid_container_mod.rs  div_player_actions_mod.rs  fetch_mod.rs  game_data_mod.rs  html_template_impl_mod.rs  lib.rs  p01_start_mod.rs  p02_start_a_group_mod.rs  p03_join_a_group_mod.rs  p04_wait_to_start_mod.rs  p05_choose_game_mod.rs  p06_drink_mod.rs  p11_gameboard_mod.rs  p21_menu_mod.rs  p41_webrtc_mod.rs  root_rendering_component_mod.rs  router_impl_mod.rs  status_1st_card_mod.rs  status_2nd_card_mod.rs  status_drink_mod.rs  status_game_data_init_mod.rs  status_game_over_mod.rs  status_joined_mod.rs  status_reconnect_mod.rs  status_take_turn_mod.rs  status_waiting_ack_msg_mod.rs  storage_mod.rs  web_data_mod.rs  webrtc_impl_mod.rs  websocket_boiler_mod.rs  websocket_spec_mod.rs
unforgettable7_common/: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  lmakeversionfromdate.json
unforgettable7_common/src/: lib.rs
unforgettable7_server/: .gitignore  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
unforgettable7_server/other/main_panicks_on disconnect.rs/: main.rs
unforgettable7_server/src/: main.rs
webfolder/unforgettable7/: index.html  manifest.json  p01_start.html  p02_start_a_group.html  p03_join_a_group.html  p04_wait_to_start.html  p05_choose_game.html  p06_drink.html  p07_do_not_drink.html  p08_instructions.html  p11_gameboard.html  p21_menu.html  p31_debug_text.html  p41_webrtc.html  service_worker.js  start_service_worker.js
