[package]
name = "unforgettable7"
version = "2021.113.1919"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "don't forget to drinking game"
repository = "https://github.com/bestia-dev/unforgettable7_game"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
# region: dependencies to my crates.io libraries
reader_for_microxml = "2.0.1"
qrcode53bytes ="1.1.0"
rust_wasm_websys_utils = "0.4.3"
rust_wasm_dodrio_router = "0.5.2"
rust_wasm_dodrio_templating = "1.0.2"

# for development I use the local libraries
# rust_wasm_websys_utils = { path = "../../rust_wasm_websys_utils" }
# rust_wasm_dodrio_router = { path = "../../rust_wasm_dodrio_router" }
# rust_wasm_dodrio_templating = { path = "../../rust_wasm_dodrio_templating" }
# qrcode53bytes = { path = "../../qrcode53bytes" }
rust_wasm_websocket = { path = "../../rust_wasm_websocket" }
rust_wasm_webrtc = { path = "../../rust_wasm_webrtc" }

# endregion: my dependencies

# region: other dependencies
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
js-sys = "0.3.46"
unwrap = "1.2.1"
dodrio = "0.2.0"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.1", features = ["js"]}
rand = { version = "0.8.2", features = ["small_rng"] }
serde = "1.0.119"
serde_derive ="1.0.119"
serde_json = "1.0.61"
futures = "0.3.9"
wasm-bindgen-futures = "0.4.19"
strum = "0.20.0"
strum_macros = "0.20.1"
conv = "0.3.3"
gloo-timers = {version="0.2.1", features=["futures"]}
# endregion: other dependencies

# unused dependencies
# log = "0.4.8"
# udep mopa = "0.2.2"
# dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "main" }
# dodrio = {path = "../../rust_wasm_dodrio_copy"}


[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "History",
  "HtmlElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlHtmlElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "HtmlSpanElement",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Node",
  "Performance",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "RtcConfiguration",
  "RtcDataChannelInit",
  "RtcDataChannel",
  "RtcDataChannelState",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionIceEvent",
  "RtcPeerConnection",
  "RtcSdpType",
  "Screen",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

# Rust does not have yet 2020-04-20 "profiles" on workspace sub-projects.
# I can put it only on the workspace alone.
# [profile.release]
# panic = "abort"
