[package]
name = "unforgettable7_common"
version = "2021.113.1953"
description = "commons for unforgettable7 wasm and server"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/unforgettable7_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
serde = "1.0.119"
serde_derive = "1.0.119"