[package]
name = "unforgettable7_server"
# no need for semver version if it is not a library
version = "2021.112.1529" 
description = "server for the game unforgettable7 http + WebSocket on the same port"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/unforgettable7_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
# dep from this workspace
unforgettable7_common = { path = "../unforgettable7_common" }

futures = "0.1"
log = "0.4.13"
env_logger = "0.8.2"
warp="0.1.20"
regex="1.4.3"
# cmd line input parameters
clap ="2.33.3"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.119"
serde_derive ="1.0.119"
serde_json = "1.0"
unwrap = "1.2.1"
