[package]
name = "unforgettable7_server"
version = "2021.113.1118"
description = "server for the game unforgettable7 http + WebSocket on the same port"
authors = ["bestia.dev"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/unforgettable7_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
# dep from this workspace
unforgettable7_common = { path = "../unforgettable7_common" }

futures = { version = "0.3.9", default-features = false, features = ["alloc"] }
log = "0.4.13"
env_logger = "0.8.2"
warp="0.2.5"
# warp 0.2.5 works with tokio 0.2
tokio = { version = "0.2.24", features = ["fs", "stream", "sync", "time","macros"] }
regex="1.4.3"
# cmd line input parameters
clap ="2.33.3"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.119"
serde_derive ="1.0.119"
serde_json = "1.0"
unwrap = "1.2.1"
